# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  run_app.sh  tmp_env
.github/workflows/: PyCI.yml
fixtures/: tasks.json  users.json
task_manager/: settings.py  urls.py  views.py
task_manager/apps/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py  0002_remove_label_tasks_delete_taskship.py
task_manager/apps/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_time_create.py  0003_alter_task_label.py  0003_alter_task_status_labelfortask_task_label.py  0004_alter_labelfortask_label_alter_labelfortask_task.py  0004_alter_task_label.py  0005_alter_task_label.py  0007_alter_task_executor.py
task_manager/apps/users/: forms.py  tests.py  urls.py  views.py
task_manager/apps/users/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: auth.html  basic.html  index.html
task_manager/templates/crud/: create&update.html  delete.html
task_manager/templates/lists/: labels_list.html  statuses_list.html  users_list.html
task_manager/templates/tasks/: show_task.html  tasks_list.html  tasks_list2.html
task_manager/utils/: text.py
