[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Polina Ikonnikova <spollyv@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_52"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"


[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
