[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Polina Ikonnikova <spollyv@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_52"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
django-bootstrap4 = "^22.2"
flake8 = "^5.0.4"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
