[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Polina Ikonnikova <spollyv@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"
python-dotenv = "^0.21.0"
django-bootstrap4 = "^22.2"
gunicorn = "^20.1.0"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
